--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
 			<div class="nav-collapse">
 				<ul class="nav">
 					<li><%= link_to "Leaderboard", root_path %></li>
-					<li><%= link_to "Players", root_path %></li>
+					<li><%= link_to "Players", players_path %></li>
 					<% if admin_signed_in? %>
 						<li><%= link_to "Enter Game", new_game_path %></li>
 						<li><%= link_to "Logout", destroy_admin_session_path, :method => :delete %></li>
