added a per game average

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,16 @@
 		<% end %>
 	</table>
 	
+<h1 align="center">Per Game Average</h1>
+	<table class="table table-striped">
+		<% @players.each do |player| %>
+			<tr>
+				<td><%= player.name %></td>
+				<td><%= player.per_game_average %></td>
+			</tr>
+		<% end %>
+	</table>
+	
 
 <h1 align="center">Most Recent Games</h1>
 	<% @games.each do |game| %>
