players names now only show last initial

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
 		<table class="table table-striped">
 			<% game.results.each do |result| %>
 			<tr>
-				<td><%= result.player.first_name %></td>
+				<td><%= result.player.name %></td>
 				<td><%= result.score %></td>
 			</tr>
 			<% end %>
